# quanti-gin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release-please.yml  static.yml
notebooks/: .gitattributes  Visualization.ipynb
notebooks/Summary/: Summary.html  _quarto.yml
quanti_gin/: __main__.py  data_generator.py  environment.yml  shared.py
quanti_gin/examples/: custom_method.py  customized_generator.py
