[tool.poetry]
name = "quanti-gin"
version = "2.5.0"
description = "A customizable data generator for quantum simulation"
authors = ["Korbinian Stein <kstein@inforbi.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nylser/quanti-gin"
packages = [{include = "quanti_gin"}]

[tool.poetry.dependencies]
python = ">=3.10"
tequila-basic = "^1.9.8"
pandas = "^2.2.2"
numpy = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
